<resources>
    <string name="app_name">SUlivet</string>
    <string name="_0">0</string>


    <!-- CoffeeMenuActivities Strings -->

    <string name="activity_cappuccino_content">Espresso (ess-PRESS-oh) is a full-flavored, concentrated form of coffee that is served in “shots.” It is made by forcing pressurized, hot water through very finely ground coffee beans. This process is called “pulling a shot.”</string>
    <string name="activity_cappuccino_order_btn">Popular Variants</string>
    <string name="activity_cappuccino_nutri_btn">Nutrition facts</string>
    <string name="activity_espresso_content">Espresso (ess-PRESS-oh) is a full-flavored, concentrated form of coffee that is served in “shots.” It is made by forcing pressurized, hot water through very finely ground coffee beans. This process is called “pulling a shot.”</string>
    <string name="activity_espresso_order_btn">Popular Variants</string>
    <string name="activity_espresso_nutri_btn">Nutrition facts</string>
    <string name="activity_latte_content">Espresso (ess-PRESS-oh) is a full-flavored, concentrated form of coffee that is served in “shots.” It is made by forcing pressurized, hot water through very finely ground coffee beans. This process is called “pulling a shot.”</string>
    <string name="activity_mocha_content">Espresso (ess-PRESS-oh) is a full-flavored, concentrated form of coffee that is served in “shots.” It is made by forcing pressurized, hot water through very finely ground coffee beans. This process is called “pulling a shot.”</string>
    <string name="activity_mocha_order_btn">Popular Variants</string>
    <string name="activity_mocha_nutri_btn">Nutrition facts</string>


    <!-- Menu Strings -->

    <string name="activity_menu_title">Coffeeboy</string>
    <string name="activity_menu_cappuccino">Cappuccino</string>
    <string name="activity_menu_espresso">Espresso</string>
    <string name="activity_menu_latte">Latte</string>
    <string name="activity_menu_mocha">Mocha</string>
    <string name="activity_menu_order_btn">Order your coffee now</string>


    <!-- Facebook Strings -->

    <string name="facebook_app_id">2043659265654462</string>
    <string name="fb_login_protocol_scheme">fb2043659265654462</string>


    <!-- RecipeDetail Strings -->

    <string name="recipe_detail_image">Recipe Image</string>
    <string name="recipe_detail_content">Recipe Content</string>
    <string name="recipe_detail_ingredients">Recipe Ingredients</string>

    <!-- ForgotPassword Strings -->

    <string name="activity_forgot_pass_edittext">Type your email</string>
    <string name="activity_forgot_pass_btn">Send my new password</string>

    <!-- ItemRecipe Strings -->

    <string name="item_recipe_img_content">Picture</string>
    <string name="item_recipe_title">title</string>

    <!--ItemMenu Strings -->

    <string name="item_menu_header">item menu header</string>
    <string name="item_menu_description">item menu description</string>
    <string name="item_menu_content_description">content discrption</string>

    <!--ItemEssential Strings -->

    <string name="item_essential_header">Header</string>
    <string name="item_essential_content">Content Description</string>


    <!-- Wizard Strings -->

    <string name="wizard_one_estimated_user_spend_on_food">Hvor mange penge bruger den gennemsnitlige udeboende, SU-modtager på mad?</string>
    <string name="wizard_one_dkk">DKK</string>
    <string name="wizard_dkk">DKK</string>
    <string name="wizard_response_userguess">Response to user guess</string>
    <string name="wizard_data_from_user">DKK DATA FROM USER</string>


    <!-- Menu Strings -->

    <string name="menu_kitchen_essentials">Cafe Laté</string>


    <!-- FRAGMENTS Strings -->

    <!-- LoginFrag Strings -->

    <string name="frag_login_email_view">Email</string>
    <string name="frag_login_password_view">Password</string>
    <string name="frag_login_button">Log in with your account</string>
    <string name="frag_login_continue_with_social">Continue with Google</string>
    <string name="frag_login_header">Start brewing</string>


    <!-- SignUpFrag Strings -->

    <string name="frag_signup_username_view">Desired Username</string>
    <string name="frag_signup_email">Email</string>
    <string name="frag_signup_password">Password</string>
    <string name="frag_signup_create_account_btn">Create Account</string>


    <!-- Loginhandler Strings -->

    <string name="loginhandler_logintab">Login</string>
    <string name="loginhandler_signuptab">Sign up</string>


    <!-- MyProfile Strings -->

    <string name="frag_myprofile_username">Jonathan De Watt</string>
    <string name="action_settings">action settings</string>
    <string name="cheap_title" />
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="activity_forgot_password_btn">Forgot password</string>
    <string name="activity_forgot_password_email_hint">Type your email here</string>
    <string name="detail_recipe_description">picture description</string>
    <string name="recipe_detail_recipe_title">title</string>
    <string name="recipe_detail_content_c">content</string>
    <string name="recipe_detail_ingrediens">Ingredients</string>
    <string name="wizard_reponse">response to user</string>
    <string name="wizard_data_from">data from user</string>
    <string name="item_menu_image_content">picture item menu</string>
    <string name="item_recipe_picture_description">picture description item recipe</string>
    <string name="item_recipe_title_text">recipe title item recipe</string>
    <string name="item_essential_picture_description">picture description</string>
    <string name="activity_customize_number_of_drinks_txt">1</string>
    <string name="customize_size_txt">Size</string>
    <string name="activity_customize_currency">Euro</string>
    <string name="activity_customize_price">3.35</string>
    <string name="activity_customize_total">Total:</string>
    <string name="activity_customize_additions">Additions</string>

    <!-- BottomDrawer Strings -->


    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_coffee">Coffee</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_map_fragment">Map</string>
    <string name="frag_login_password_hint">Password</string>
    <string name="frag_login_username_hint">Username</string>
    <string name="frag_login_email_hint">Email</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="popular_variants">Popular Variants</string>
    <string name="activity_latte_text">A Caffe Latte kan be made just as fast as an Americano since it’s made from 1/3 espresso, approx. 2/3 hot milk and top it of with a layer of foamed milk.</string>
    <string name="activity_latte_text_text">Irish coffee is a cocktail of sweetened coffee, Irish whiskey, and whipped cream that is not only acceptable but also expected as a morning treat on holidays.</string>
    <string name="activity_irish_text">Irish coffee is a cocktail of sweetened coffee, Irish whiskey, and whipped cream that is not only acceptable but also expected as a morning treat on holidays.</string>
    <string name="activity_cappu_text">Cappuccino is an espresso-based drink, of Italian origin, with 1/3 espresso, 1/3 steamed milk, and 1/3 wet foamed milk. The difference between a latte and a cappuccino is the milk content.</string>
    <string name="activity_americano_text">A double shot of espresso and hot water. Called a black coffee or an Americano.</string>
    <string name="activity_mocha_text">Some places will add hot chocolate to the drink, others will add a chocolate syrup. A mocha latte is the common preparation. Not to be confused with Mocha beans</string>

    <!-- LogoutFragment Strings -->

    <!-- MyFoodFragment Strings -->

    <!-- SettingsFragment Strings -->


</resources>
