<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bba"
    android:fillViewport="true"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat"
        android:maxLines="1"
        android:text="Cheapfoodz"
        android:textSize="45sp"
        android:textStyle="normal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/fisk"
        android:fontFamily="@font/montserrat"
        android:maxLines="1"
        android:text="Vejentilnemmad"
        android:textSize="30sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/frag_create_acc_desired_username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/advent_pro"
        android:hint="@string/frag_signup_username_view"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textColor="@color/blackText"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/frag_create_acc_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/advent_pro"
        android:hint="@string/frag_signup_email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textColor="@color/blackText"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/frag_create_acc_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/advent_pro"
        android:hint="@string/frag_signup_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/blackText"
        android:textColorHint="@android:color/darker_gray" />


    <Button
        android:id="@+id/frag_signup_create_account_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/card_edge"
        android:backgroundTint="@color/redcolor"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/frag_signup_create_account_btn"
        android:textSize="16sp"
        android:textStyle="normal" />


</LinearLayout>
