<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custbb"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context="com.example.eijaz.lottietutorial.MainActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="false"
            app:lottie_fileName="a_cup_of_coffee.json"
            app:lottie_loop="true" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/av_from_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/activity_customize_header_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:src="@mipmap/macciatoicon" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clipToPadding="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_customize_drink_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:layout_marginStart="9dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_light"
            android:text="Macciato"
            android:textColor="@color/brown_buttons"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_customize_number_of_drinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/activity_customize_minus"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/activity_customize_number_of_drinks_txt"
            android:textColor="@color/brown_buttons"
            android:textSize="30sp" />


        <ImageView
            android:id="@+id/activity_customize_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="13dp"
            android:layout_toStartOf="@+id/activity_customize_plus"
            android:src="@mipmap/minusicon" />


        <ImageView
            android:id="@+id/activity_customize_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:src="@mipmap/plusicon" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="@color/brown_buttons" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/activity_customize_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="31dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/customize_size_txt"
            android:textColor="@color/brown_buttons"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/activity_customize_size_small"
            android:layout_width="29dp"
            android:layout_height="27dp"
            android:layout_alignBottom="@+id/activity_customize_size"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/activity_customize_size"
            android:src="@mipmap/flask1" />

        <ImageView
            android:id="@+id/activity_customize_size_medium"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="21dp"
            android:layout_toStartOf="@+id/activity_customize_size_large"
            android:layout_toEndOf="@+id/activity_customize_size_small"
            android:src="@mipmap/flask2" />

        <ImageView
            android:id="@+id/activity_customize_size_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/flask2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="@color/brown_buttons" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/activity_customize_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/open_sans_light"
            android:text="Sugar"
            android:textColor="@color/brown_buttons"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/activity_customize_sugar_none"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-10dp"
            android:layout_toStartOf="@+id/activity_customize_sugar_one"
            android:layout_toEndOf="@+id/activity_customize_sugar"
            android:src="@mipmap/sugar1" />

        <ImageView
            android:id="@+id/activity_customize_sugar_one"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="14dp"
            android:layout_toStartOf="@+id/activity_customize_sugar_two"
            android:src="@mipmap/sugar2" />

        <ImageView
            android:id="@+id/activity_customize_sugar_two"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="14dp"
            android:layout_toStartOf="@+id/activity_customize_sugar_three"
            android:src="@mipmap/sugar3" />

        <ImageView
            android:id="@+id/activity_customize_sugar_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="59dp"
            android:src="@mipmap/sugar4" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="@color/brown_buttons" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/activity_customize_total"
            android:textColor="@color/brown_buttons"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/activity_customize_total_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/activity_customize_price"
            android:textColor="@color/brown_buttons"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/activity_customize_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/activity_customize_currency"
            android:textColor="@color/brown_buttons"
            android:textSize="25sp"
            android:textStyle="italic" />


    </LinearLayout>

    <Button
        android:id="@+id/activity_customize_order_coffee_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_edge"
        android:backgroundTint="@color/brown_buttons"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/activity_menu_order_btn"
        android:textSize="22sp" />


</LinearLayout>
